<?xml version="1.0"?>
<package format="3">
  <name>blueberryPose_ros2</name>
  <version>0.0.1</version>
  <description>YOLOv11 + keypoint‐heatmap ROS 2 detection node for blueberries</description>
  <maintainer email="aaronmcafee@example.com">Aaron McAfee</maintainer>
  <license>Apache-2.0</license>

  <!-- ament_python buildtool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
